Fix scrollbar showing when it shouldn't

--- a/css/site.css
+++ b/css/site.css
@@ -24,8 +24,6 @@
     font-size: 1.5em
 }
 
-
-
 /* table.table-fit {
     width: auto !important;
     table-layout: auto !important;
@@ -37,13 +35,11 @@ table.table-fit tbody td, table.table-fit tfoot td {
     width: auto !important;
 } */
 
-/* .editor, .view {
-
-} */
-
 .address-table {
     font-family: monospace;
     font-size: 125%;
+    padding: 0;
+    margin: 0;
 }
 
 .address-table td {
